--- a/profile.css
+++ b/profile.css
@@ -8,3 +8,37 @@ body {
   background-attachment: fixed;
   background-repeat: repeat;
 }
+.page {
+  width: 80%;
+  margin: 3% auto;
+  background-color: white;
+  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+  overflow: visible;
+}
+
+.banner{
+  height:350px;
+  background-image: url("banner.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: relative;
+  overflow: visible;
+}
+
+.profile-img-wrapper {
+  position: relative;
+  height: 100%;
+  left: 2px;
+}
+
+.profile-img {
+  position: absolute;
+  top: 70%;
+  left: -2%;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 10px solid white;
+  object-fit: cover;
+}
+
