--- a/profile.css
+++ b/profile.css
@@ -67,16 +67,23 @@ body {
 }
 
 .img-col {
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .side-img {
-
+  max-height: 600px;
+  max-width: 400px;
+  width: 30vw;
+  height: auto;
 }
 
 .sub-title {
+  margin: 18px 0 6px 0;
 }
 
 .siblings {
-
+  margin: 0;
+  padding-left: 20px;
 }
