--- a/profile.css
+++ b/profile.css
@@ -87,3 +87,25 @@ body {
   margin: 0;
   padding-left: 20px;
 }
+
+.section-title {
+}
+
+.endorsements {
+
+}
+
+.endorse-layout {
+
+}
+
+.endorsement-card {
+
+}
+
+.endorsement-card hr {
+
+}
+
+.endorser {
+}
