--- a/profile.css
+++ b/profile.css
@@ -94,7 +94,7 @@ body {
 }
 
 .endorsements {
-  ackground-image: url("clouds.webp");
+  background-image: url("clouds.webp");
   background-repeat: repeat;
 }
 
