--- a/profile.css
+++ b/profile.css
@@ -115,7 +115,6 @@ body {
 .endorsement-card hr {
   width: 40%;
   margin: 10px 0;
-  font-style: italic;
 }
 
 .endorser {
@@ -123,17 +122,8 @@ body {
 }
 
 .friends-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  gap: 10px;
-  padding: 10px;
-  flex-wrap: wrap;
-}
-
-.friends-row {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 4 למעלה */
+  grid-template-columns: repeat(4, 1fr); 
   gap: 20px;
   justify-items: center;
 }
