--- a/profile.css
+++ b/profile.css
@@ -1,5 +1,6 @@
 /*
-Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968
+Names: Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968
+Github URL: https://github.com/rawansaab/ex1
 */
 body {
   font-family: "Bree Serif", serif;
