--- a/profile.css
+++ b/profile.css
@@ -14,16 +14,15 @@ body {
   margin: 3% auto;
   background-color: white;
   box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
-  overflow: visible;
+  position: relative;
 }
 
 .banner{
-  height:350px;
+  height: 350px;
   background-image: url("banner.png");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
   position: relative;
-  overflow: visible;
 }
 
 .profile-img-wrapper {
