--- a/profile.css
+++ b/profile.css
@@ -51,7 +51,12 @@ body {
   text-align: center;
   margin: 0;
 }
+
 .content-block {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    padding: 2% 5%;
 
 }
 
@@ -59,26 +64,37 @@ body {
   flex: 1;
 }
 
-.img-col {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.content-block img {
+    display: block;
+    margin: 0 auto;
+    max-height: 600px;
+    max-width: 400px;
+    width: 30vw;
 }
 
-.side-img {
-  max-height: 600px;
-  max-width: 400px;
-  width: 30vw;
-  height: auto;
+.info-section .text-column {
+    padding-right: 20px; 
 }
 
-.sub-title {
-  margin: 18px 0 6px 0;
+
+.info-row {
+    display: flex;
+    margin-bottom: 15px;
+    align-items: flex-start;
 }
 
-.siblings {
-  margin: 0;
-  padding-left: 20px;
+.info-label {
+    width: 40%; 
+    font-weight: bold;
+}
+
+.info-value {
+    width: 60%; 
+}
+
+.info-value ul {
+    margin: 0;
+    padding-left: 20px;
 }
 
 .section-title {
