--- a/profile.css
+++ b/profile.css
@@ -76,7 +76,6 @@ body {
     padding-right: 20px; 
 }
 
-
 .info-row {
     display: flex;
     margin-bottom: 15px;
@@ -97,14 +96,7 @@ body {
     padding-left: 20px;
 }
 
-.section-title {
-  text-transform: uppercase;
-  font-size: 2.5vw;
-  text-align: center;
-  margin: 10px 0 20px 0;
-}
-
-.endorsements {
+.endorsements-section {
   background-image: url("clouds.webp");
   background-repeat: repeat;
 }
