--- a/profile.css
+++ b/profile.css
@@ -95,17 +95,18 @@ body {
     margin: 0;
     padding-left: 20px;
 }
-.endorsement-section {
+
+.endorsements-section {
+  background-image: url("clouds.webp");
+  background-repeat: repeat;
+  flex-direction: row-reverse;
+}
+
+.endorsement-section h2 {
     font-family: 'Rammetto One', cursive;
     text-transform: uppercase;
     font-size: 2.5vw;
     margin-top: 0;
-}
-
-.endorsements-section h2{
-  background-image: url("clouds.webp");
-  background-repeat: repeat;
-  flex-direction: row-reverse;
 }
 
 .endorsement-card {
@@ -120,8 +121,10 @@ body {
   margin: 10px 0;
 }
 
-.endorser {
-  margin: 0;
+.endorsement-card span {
+    font-style: italic;
+    display: block;
+    margin-top: 5px;
 }
 
 .friends-row {
