--- a/profile.css
+++ b/profile.css
@@ -40,7 +40,6 @@ body {
   left: -2%;
   border-radius: 50%;
   position: absolute;
-  object-fit: cover;
 }
 
 .main-title {
@@ -185,17 +184,23 @@ body {
   }
 
   .content-block .text-column {
+    padding-right: 0;
   }
 
   .content-block img {
-
+    width: 80vw;
+    max-width: 400px;
+    max-height: 600px;
+    height: auto;
   }
 
   .friends-grid {
-
+    flex-direction: column;
+    align-items: center;
   }
 
   .friends-grid img {
- 
+    width: 200px;
+    height: 300px;
   }
 }
