--- a/profile.css
+++ b/profile.css
@@ -132,7 +132,6 @@ body {
 .friends-section {
   padding: 2% 5%;
   text-align: center;
-
 }
 
 .friends-section h2 {
@@ -142,17 +141,20 @@ body {
 }
 
 .friends-grid {
-  display: flex;
-  flex-wrap: wrap; 
+  display: grid;
+  grid-template-columns: repeat(4, 200px); 
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: end
+  width: 100%;                   
 }
 
 .friends-grid img {
   padding: 10px;
   height: 300px;
   width: 200px;
+  box-sizing: border-box;
   object-fit: cover;
+  object-position: center top;
 }
 
 .footer {
@@ -162,6 +164,7 @@ body {
   font-weight: bold;
   text-align: center;
 }
+
 @media (min-width: 320px) and (max-width: 480px) {
   .main-container {
     width: 95%;
@@ -195,8 +198,7 @@ body {
   }
 
   .friends-grid {
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: 1fr;
   }
 
   .friends-grid img {
