--- a/profile.css
+++ b/profile.css
@@ -46,7 +46,7 @@ body {
   font-size: 3vw;
   font-family: "Rammetto One", cursive;
   padding-top: 10px;
-  text-shadow: 3px 1px #999999;
+  text-shadow: 3px 3px 1px #999999;
   text-align: center;
   margin: 0;
 }
