--- a/profile.css
+++ b/profile.css
@@ -167,7 +167,7 @@ body {
   text-align: center;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .main-container {
     width: 100%;
     margin: 0;
